front/src/pages/login/Login.css
.login-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100%;
}
.login-container .language-selector{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 20px;
    margin-bottom: 20px;
}
.login-container .language-selector h3{
    margin: 0;
}

.login-container .login-card{
    border-radius: 30px;
    padding: 30px;
    background-color: #1E293B;
    width: calc(100% - 30px);
    max-width: 800px;
    color: white;
}

.login-container .login-card .login-card-content .login-form{
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.login-container .login-card .login-card-content .login-form input{
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 10px;
}

.login-container .login-card .login-card-content .login-form .input{
    margin-bottom: 20px;   
}

.login-container .login-card .login-card-content .login-form button{
    background-color: #3B82F6;
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 10px;
    cursor: pointer;
    margin-bottom: 20px;
    height: 58px;
    font-size: 20px;
}

